fix: enable to scroll when a page has multiple elements with no-scrollbar class

--- a/client/assets/variables.scss
+++ b/client/assets/variables.scss
@@ -148,10 +148,12 @@ $__layer-map: (
   -ms-overflow-style: none;
   scrollbar-width: none;
 
-  &::-webkit-scrollbar,
-  &::-webkit-scrollbar-track,
-  &::-webkit-scrollbar-thumb {
-    display: none;
+  &::-webkit-scrollbar {
+    // TODO: 完全に非表示にさせると複数このクラスがあたっている要素がある場合、Chrome では2個目以降の要素のスクロールができなくなる (Chrome 88 以降?)
+    // display: none;
+    opacity: 0;
+    width: 1px;
+    height: 1px;
   }
 }
 
